# Fight

./: .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json
docs/: stage-10-smoke-checklist.md  stage-14a-backup-regression-checklist.md  stage-14b-transaction-audit.md  stage-16-notebooks-ui-rebuild.md  tauri-csp-audit.md
scripts/: check-tauri-commands.mjs  prepare-app-icon.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_note_search_fts.sql  0003_note_tags.sql  0004_review_schedule.sql  0005_app_meta.sql  0006_custom_ordering.sql  0007_tag_occurrences.sql  0008_note_tag_occurrence_remark.sql  0009_soft_delete_trash.sql
src-tauri/src/: database_ops.rs  lib.rs  main.rs  resource_ops.rs  settings_backup.rs
src/app/: App.tsx  sections.ts
src/app/layout/: AppShell.module.css  AppShell.tsx  GlobalSearch.module.css  GlobalSearch.tsx
src/features/navigation/: NavigationIcons.tsx  NavigationRail.module.css  NavigationRail.tsx  navigationItems.ts
src/features/notebooks/: ItemActionMenu.tsx  ManagedResourceImage.tsx  MathEditorDialog.tsx  NoteEditorPane.tsx  NoteEditorSurface.module.css  NoteTagManager.module.css  NoteTagManager.tsx  NoteTextTagManager.module.css  NoteTextTagManager.tsx  db.ts  (+36 more)
src/pages/: NotebooksPage.tsx  PageLayout.module.css  ReviewCalendarPage.tsx  SettingsPage.module.css  SettingsPage.tsx  TagPlazaPage.tsx  TrashPage.module.css  TrashPage.tsx
src/styles/: base.css  themes.css  tokens.css
(+15 files in other folders)
