[package]
name = "fight-notes"
version = "0.1.0"
description = "本地优先中文笔记桌面应用"
authors = ["lihongxia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fight_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rfd = "0.14"
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dependencies.tauri-plugin-sql]
version = "2"
features = ["sqlite"]
